; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_uniphier_wdt.c___uniphier_watchdog_restart.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_uniphier_wdt.c___uniphier_watchdog_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regmap = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regmap*, i32)* @__uniphier_watchdog_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__uniphier_watchdog_restart(%struct.regmap* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.regmap*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.regmap* %0, %struct.regmap** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.regmap*, %struct.regmap** %4, align 8
  %8 = call i32 @__uniphier_watchdog_stop(%struct.regmap* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* %6, align 4
  store i32 %12, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.regmap*, %struct.regmap** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @__uniphier_watchdog_start(%struct.regmap* %14, i32 %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %11
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @__uniphier_watchdog_stop(%struct.regmap*) #1

declare dso_local i32 @__uniphier_watchdog_start(%struct.regmap*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
